--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <div class="memory">
-        <h3>Memory Dump</h3>
+        <h3>Addresses Instruction Data</h3>
         <pre id="memoryDump"></pre>
     </div>
 
