--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>16x8 Instruction Reader</h1>
 
     <p>
-        Đây là trình mô phỏng bộ đọc lệnh sử dụng RAM 16x8 bit. Bộ đọc lệnh có thể được tạo ra bằng cách kết nối một mạch đọc 4-bit (4-bit counter) với một bộ nhớ RAM 16x8 bit.
+        Đây là trình mô phỏng bộ đọc lệnh sử dụng RAM 16x8 bit. Bộ đọc lệnh có thể được tạo ra bằng cách kết nối một mạch đếm 4-bit (4-bit counter) với một bộ nhớ RAM 16x8 bit.
         Mỗi ô nhớ lưu trữ một từ 8 bit. Bộ mô phỏng thực hiện thao tác đọc lệnh tại địa chỉ hiện tại và sau đó thực hiện một trong ba chế độ hoạt động:
         <ul>
             <li><strong>Chế độ bình thường (Normal)</strong>: Tự động tăng địa chỉ thêm 1 sau mỗi chu kỳ xung nhịp.</li>
